lists/failed/pcaMethods
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''pcaMethods'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-03 r85769)
Installing package(s) 'pcaMethods'
also installing the dependencies ‘pillar’, ‘gtable’, ‘lifecycle’, ‘rlang’, ‘scales’, ‘tibble’, ‘vctrs’, ‘Rcpp’, ‘ggplot2’

trying URL 'https://cloud.r-project.org/src/contrib/pillar_1.9.0.tar.gz'
Content type 'application/x-gzip' length 444528 bytes (434 KB)
==================================================
downloaded 434 KB

trying URL 'https://cloud.r-project.org/src/contrib/gtable_0.3.4.tar.gz'
Content type 'application/x-gzip' length 130100 bytes (127 KB)
==================================================
downloaded 127 KB

trying URL 'https://cloud.r-project.org/src/contrib/lifecycle_1.0.4.tar.gz'
Content type 'application/x-gzip' length 107656 bytes (105 KB)
==================================================
downloaded 105 KB

trying URL 'https://cloud.r-project.org/src/contrib/rlang_1.1.2.tar.gz'
Content type 'application/x-gzip' length 763521 bytes (745 KB)
==================================================
downloaded 745 KB

trying URL 'https://cloud.r-project.org/src/contrib/scales_1.3.0.tar.gz'
Content type 'application/x-gzip' length 302544 bytes (295 KB)
==================================================
downloaded 295 KB

trying URL 'https://cloud.r-project.org/src/contrib/tibble_3.2.1.tar.gz'
Content type 'application/x-gzip' length 565982 bytes (552 KB)
==================================================
downloaded 552 KB

trying URL 'https://cloud.r-project.org/src/contrib/vctrs_0.6.5.tar.gz'
Content type 'application/x-gzip' length 969066 bytes (946 KB)
==================================================
downloaded 946 KB

trying URL 'https://cloud.r-project.org/src/contrib/Rcpp_1.0.11.tar.gz'
Content type 'application/x-gzip' length 2994004 bytes (2.9 MB)
==================================================
downloaded 2.9 MB

trying URL 'https://cloud.r-project.org/src/contrib/ggplot2_3.4.4.tar.gz'
Content type 'application/x-gzip' length 3159578 bytes (3.0 MB)
==================================================
downloaded 3.0 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/pcaMethods_1.95.0.tar.gz'
Content type 'application/x-gzip' length 610506 bytes (596 KB)
==================================================
downloaded 596 KB

* installing *source* package ‘rlang’ ...
** package ‘rlang’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG -I./rlang/  -I/usr/local/include   -fvisibility=hidden -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c capture.c -o capture.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -I./rlang/  -I/usr/local/include   -fvisibility=hidden -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c internal.c -o internal.o
In file included from internal/internal.c:32,
                 from internal.c:1:
internal/tests.c: In function ‘ffi_test_Rf_warning’:
internal/tests.c:104:3: error: format not a string literal and no format arguments [-Werror=format-security]
  104 |   Rf_warning(r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_error’:
internal/tests.c:108:3: error: format not a string literal and no format arguments [-Werror=format-security]
  108 |   Rf_error(r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_warningcall’:
internal/tests.c:113:3: error: format not a string literal and no format arguments [-Werror=format-security]
  113 |   Rf_warningcall(call, r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~~~~~
internal/tests.c: In function ‘ffi_test_Rf_errorcall’:
internal/tests.c:117:3: error: format not a string literal and no format arguments [-Werror=format-security]
  117 |   Rf_errorcall(call, r_chr_get_c_string(msg, 0));
      |   ^~~~~~~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: internal.o] Error 1
ERROR: compilation failed for package ‘rlang’
* removing ‘/tmp/tmp/built/rlang’
* installing *source* package ‘Rcpp’ ...
** package ‘Rcpp’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I../inst/include/  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c api.cpp -o api.o
In file included from ../inst/include/Rcpp/routines.h:26,
                 from ../inst/include/RcppCommon.h:128,
                 from ../inst/include/Rcpp.h:27,
                 from api.cpp:26:
../inst/include/Rcpp/iostream/Rstreambuf.h: In member function ‘std::streamsize Rcpp::Rstreambuf<OUTPUT>::xsputn(const char*, std::streamsize) [with bool OUTPUT = true; std::streamsize = long int]’:
../inst/include/Rcpp/iostream/Rstreambuf.h:53:20: warning: field precision specifier ‘.*’ expects argument of type ‘int’, but argument 2 has type ‘std::streamsize’ {aka ‘long int’} [-Wformat=]
   53 |         Rprintf("%.*s", num, s);
      |                  ~~^~   ~~~
      |                    |    |
      |                    int  std::streamsize {aka long int}
../inst/include/Rcpp/iostream/Rstreambuf.h: In member function ‘std::streamsize Rcpp::Rstreambuf<OUTPUT>::xsputn(const char*, std::streamsize) [with bool OUTPUT = false; std::streamsize = long int]’:
../inst/include/Rcpp/iostream/Rstreambuf.h:57:21: warning: field precision specifier ‘.*’ expects argument of type ‘int’, but argument 2 has type ‘std::streamsize’ {aka ‘long int’} [-Wformat=]
   57 |         REprintf("%.*s", num, s);
      |                   ~~^~   ~~~
      |                     |    |
      |                     int  std::streamsize {aka long int}
In file included from ../inst/include/RcppCommon.h:181,
                 from ../inst/include/Rcpp.h:27,
                 from api.cpp:26:
../inst/include/Rcpp/print.h: In function ‘void Rcpp::warningcall(SEXP, const string&)’:
../inst/include/Rcpp/print.h:30:19: error: format not a string literal and no format arguments [-Werror=format-security]
   30 |     Rf_warningcall(call, s.c_str());
      |     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cc1plus: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:200: api.o] Error 1
ERROR: compilation failed for package ‘Rcpp’
* removing ‘/tmp/tmp/built/Rcpp’
ERROR: dependency ‘rlang’ is not available for package ‘lifecycle’
* removing ‘/tmp/tmp/built/lifecycle’
ERROR: dependency ‘Rcpp’ is not available for package ‘pcaMethods’
* removing ‘/tmp/tmp/built/pcaMethods’
ERROR: dependencies ‘lifecycle’, ‘rlang’ are not available for package ‘gtable’
* removing ‘/tmp/tmp/built/gtable’
ERROR: dependencies ‘lifecycle’, ‘rlang’ are not available for package ‘scales’
* removing ‘/tmp/tmp/built/scales’
ERROR: dependencies ‘lifecycle’, ‘rlang’ are not available for package ‘vctrs’
* removing ‘/tmp/tmp/built/vctrs’
ERROR: dependencies ‘lifecycle’, ‘rlang’, ‘vctrs’ are not available for package ‘pillar’
* removing ‘/tmp/tmp/built/pillar’
ERROR: dependencies ‘lifecycle’, ‘pillar’, ‘rlang’, ‘vctrs’ are not available for package ‘tibble’
* removing ‘/tmp/tmp/built/tibble’
ERROR: dependencies ‘gtable’, ‘lifecycle’, ‘rlang’, ‘scales’, ‘tibble’, ‘vctrs’ are not available for package ‘ggplot2’
* removing ‘/tmp/tmp/built/ggplot2’

The downloaded source packages are in
	‘/tmp/RtmptLfzTg/downloaded_packages’
Warning messages:
1: In install.packages(...) :
  installation of package ‘rlang’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘Rcpp’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘lifecycle’ had non-zero exit status
4: In install.packages(...) :
  installation of package ‘pcaMethods’ had non-zero exit status
5: In install.packages(...) :
  installation of package ‘gtable’ had non-zero exit status
6: In install.packages(...) :
  installation of package ‘scales’ had non-zero exit status
7: In install.packages(...) :
  installation of package ‘vctrs’ had non-zero exit status
8: In install.packages(...) :
  installation of package ‘pillar’ had non-zero exit status
9: In install.packages(...) :
  installation of package ‘tibble’ had non-zero exit status
10: In install.packages(...) :
  installation of package ‘ggplot2’ had non-zero exit status

real	0m14.395s
user	0m9.645s
sys	0m2.676s
